@@ -3,7 +3,7 @@
 
 require "optparse"
 
-require "deep-connect/deep-connect"
+require "deep-connect"
 
 require "fairy/share/base-app"
 require "fairy/share/conf"
