@@ -4,7 +4,7 @@
 #
 
 require "fiber-mon"
-require "deep-connect/deep-connect"
+require "deep-connect"
 
 require "fairy/version"
 require "fairy/share/conf"
